force-app/main/default/objects/OpportunityReviewTarget__c/OpportunityReviewTarget__c.object-meta.xml
<CustomObject>
    <label>Review Target Opportunity</label>
    <nameField>
        <label>Review Target Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityReviewTargets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>