force-app/main/default/objects/OpportunityReviewTarget__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>OpportunityReviewTargets</relationshipLabel>
    <relationshipName>OpportunityReviewTargets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>