force-app/main/default/objects/OpportunityReviewTarget__c/fields/Opportunity_Review_Session__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Review_Session__c</fullName>
    <label>Opportunity Review Session</label>
    <referenceTo>OpportunityReviewSession__c</referenceTo>
    <relationshipLabel>OpportunityReviewTargets</relationshipLabel>
    <relationshipName>OpportunityReviewTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>