force-app/main/default/objects/OpportunityReviewTarget__c/fields/Today_Review_Target__c.field-meta.xml
<CustomField>
    <fullName>Today_Review_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Today Review Target</label>
    <type>Checkbox</type>
</CustomField>